<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SplashScreen">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_above="@+id/contGetStarted"
     android:gravity="center"
     android:orientation="vertical">

     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="35dp"
         android:layout_gravity="center"
         android:src="@drawable/splash_screen"/>

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/covid_19"
         android:textStyle="bold"
         android:layout_margin="10dp"
         android:textSize="30sp"
         android:textColor="@color/colorWhite"
         android:textAlignment="center" />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/about_covid"
         android:textStyle="normal"
         android:layout_margin="5dp"
         android:textSize="15sp"
         android:textColor="@color/colorWhite"
         android:textAlignment="center" />

 </LinearLayout>

<LinearLayout
    android:id="@+id/contGetStarted"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:layout_marginRight="10dp"
    android:padding="5dp"
    android:layout_marginLeft="10dp"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:background="@color/colorWhite"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:textStyle="bold"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary" />

<ImageButton
    android:id="@+id/btnGo"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:textStyle="bold"
    android:background="@color/colorPrimary"
    android:src="@drawable/ic_arrow"
    android:layout_margin="5dp"
    android:textSize="15sp"
    android:textColor="@color/colorWhite" />

</LinearLayout>
</RelativeLayout>