<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="COVID-19 GLOBAL CASES"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/colorWhite"
            android:layout_margin="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvlabelTotalConfirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmed"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/confirmedTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textSize="20sp"
                android:textColor="@color/colorRed" />


        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:cardElevation="5dp"
                android:layout_weight="1"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_margin="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelTotalRecovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/recoveredTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorGreen" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_weight="1"
                app:cardElevation="10dp"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/colorWhite"
                android:layout_margin="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvLabelTotalDeaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deceased"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/deceasedTv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textColor="@color/colorGrey" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Symptoms"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:textSize="20sp"
            android:textColor="@color/colorDarkGrey" />
        <TextView
            android:id="@+id/txtViewSymptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="view all"
            android:textStyle="normal"
            android:layout_marginRight="15dp"
            android:textSize="15sp"
            android:textColor="@color/colorGrey" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="5"
            tools:listitem="@layout/item_symptoms" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/colorPrimary">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:layout_margin="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="To Know More About COVID-19"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite" />
                <Button
                    android:id="@+id/btnKnowMore"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="More Info"
                    android:textStyle="bold"
                    android:paddingRight="20dp"
                    android:paddingLeft="20dp"
                    android:textAllCaps="false"
                    android:background="@color/colorDarkBlue"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorWhite"
                android:src="@drawable/covid_person"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/colorPrimary"
            android:layout_margin="10dp" >
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Precautions"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:textSize="20sp"
                android:textColor="@color/colorDarkGrey" />
            <TextView
                android:id="@+id/txtViewPrecautions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="view all"
                android:textStyle="normal"
                android:layout_marginRight="15dp"
                android:textSize="15sp"
                android:textColor="@color/colorGrey" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerViewPrecautions"
            tools:itemCount="5"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_precautions"
            android:orientation="horizontal"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>